
Version 0.8.7	- xx December 2001
  * Add warning for local variable shadowing global variable

Version 0.8.6	- 16 November 2001
  * Add -5/--maxrefs for maximum # of identifier references (Law of Demeter)
  * Fix problem where user defined classes weren't checked for valid attributes
  * Allow use of __pychecker__ in class scope
  * Fix a lot of global function arg counts for Python 2.2
  	(many constructors can take no arguments now)
  * Fix spurious warning (Function return types are inconsistent)
	when multiple returns w/a constant & a local variable of same type
  * Fix spurious warning for format strings when using a dict local variable
  * Rename pychecker.sh script to pychecker on Unix

Version 0.8.5	- 17 October 2001
  * Add check for using builtin function/method const (None) return value
  	(e.g., not_a_new_list = [].sort())
  * Add check for builtin object method calls for right # args
  	(e.g., [].count(), {}.keys(), file.seek(0))
  * Add check for object method calls for right # args
  	(calling object when type is known, ie instatiated locally)
  * Add check for modifying a parameter that has a default value
  	(e.g., def func(mutable = []): mutable.append(0))
  * Add check for using future keywords (e.g., yield)
  * Add check for using unary positive on variables (e.g., +x)
  * Add check for recursive calls to __repr__ implementations (`self`)
  * Add -X/--reimport option to turn off various module reimport warnings
  * Add -V/--version option for printing PyChecker version
  * Fix some spurious warnings for inconsistent return value types
  * Fix spurious warning from calling functions like:  zip(*args)
  * Fix -F/--rcfile option so it really works

Version 0.8.4	- 24 September 2001
  * Allow warning suppressions to be specified as regular expressions
  * Add -z/--no-varargsused to ignore *args for functions w/variable args
  * Add warning checks when deleting variables
  * Add check for except Error1, Error2 : # should be except (Error1, Error2) :