@@ -74,6 +74,7 @@ INTEGER_DIVISION = "Using integer division (%s / %s) may return integer or float
 USING_TUPLE_ACCESS_TO_LIST = "Using a tuple instead of slice as list accessor for (%s)"
 
 STMT_WITH_NO_EFFECT = "Operator (%s) doesn't exist, statement has no effect"
+POSSIBLE_STMT_WITH_NO_EFFECT = "Statement appears to have no effect"
 UNARY_POSITIVE_HAS_NO_EFFECT = "Unary positive (+) usually has no effect"
 LIST_APPEND_ARGS = "[].append() only takes 1 argument in Python 1.6 and above for (%s)"
 
