@@ -18,3 +18,10 @@ test_input/test48.py:28: Object (jj) has no attribute (a)
 test_input/test48.py:29: Object (jj) has no attribute (b)
 test_input/test48.py:46: Object (tt) has no attribute (a)
 test_input/test48.py:47: Object (tt) has no attribute (b)
+test_input/test48.py:53: Statement appears to have no effect
+test_input/test48.py:54: Statement appears to have no effect
+test_input/test48.py:55: Statement appears to have no effect
+test_input/test48.py:56: Statement appears to have no effect
+test_input/test48.py:57: Statement appears to have no effect
+test_input/test48.py:58: Statement appears to have no effect
+test_input/test48.py:59: Statement appears to have no effect
